<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:id="@+id/lbl_battery_level"
        android:text="@string/lbl_battery_label"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/battery_level"
        android:text="@string/battery_label"
        android:layout_toRightOf="@+id/lbl_battery_level"
        android:layout_toEndOf="@+id/lbl_battery_level"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbl_battery_status"
        android:text="@string/lbl_battery_status"
        android:layout_below="@+id/lbl_battery_level"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/battery_status"
        android:text="@string/battery_status"
        android:layout_toRightOf="@+id/lbl_battery_status"
        android:layout_toEndOf="@+id/lbl_battery_status"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/battery_level"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbl_battery_capacity"
        android:text="@string/lbl_battery_capacity"
        android:layout_below="@+id/lbl_battery_status"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/battery_capacity"
        android:text="87687"
        android:layout_toRightOf="@+id/lbl_battery_capacity"
        android:layout_toEndOf="@+id/lbl_battery_capacity"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/battery_status"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbl_battery_remain"
        android:text="@string/lbl_battery_remain"
        android:layout_below="@+id/lbl_battery_capacity"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/battery_remain"
        android:text="2hr"
        android:layout_toRightOf="@+id/lbl_battery_remain"
        android:layout_toEndOf="@+id/lbl_battery_remain"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/battery_capacity"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
